chore: 프로젝트 배포방식 변경